--- a/components/Employee/Employee/employee.module.css
+++ b/components/Employee/Employee/employee.module.css
@@ -14,7 +14,7 @@
     -2px -2px 0 #ffffff; 
 }
 .header{
-  background-image: url(/employeeHeader.jpg);
+  background-image: url(/employee1.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
