--- a/components/Employee/WorkShedule/workshedule.module.css
+++ b/components/Employee/WorkShedule/workshedule.module.css
@@ -2,14 +2,63 @@
     display: flex;
 }
 .content{
-  width: 80%;
-  padding: 20px;
+  width: 82%;
+}
+.headerT{
+  background-image: url(/workShedule.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 30px 20px;
+  height: 25vh;
+}
+.titleHeader{
+  font-size: 50px;
+  font-weight: 800;
+  color: #333;
+  margin-bottom: 20px;
+  text-shadow: 
+    2px 2px 0 #31b90c,  
+    -2px 2px 0 #d93615, 
+    2px -2px 0 #ffffff, 
+    -2px -2px 0 #1bbcd8; 
+}
+.bodySD{
+  padding: 40px;
+  display: flex;
+  gap: 20px;
+}
+.wsd{
+  width: 65%;
+  padding: 0px 30px 20px 30px;
+  background-image: url(/bluebg.jpg);
+  background-color: rgb(253, 176, 60);
+  text-align: center;
+}
+.bodyCricle{
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.cricle{
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: white;
+}
+.titleWsd{
+  font-size: 36px;
+  color: black;
+  font-weight: 800;
 }
 .calendarContainer {
   width: 100%;
   max-width: 900px;
   margin: 0 auto;
   padding: 20px;
+  border-radius: 20px;
   border: 2px solid gray;
   background-color: white;
 }
@@ -45,7 +94,7 @@
 }
 
 .headerTitle {
-  font-size: 24px;
+  font-size: 20px;
   color: #0F4C81;
   font-weight: 700;
 }
@@ -88,7 +137,7 @@
   background-color: #fff;
   min-height: 50px;
   color: rgb(91, 90, 90);
-  height: 100px;
+  height: 70px;
   overflow-y: auto;
   scrollbar-width: none;
 }
@@ -133,7 +182,14 @@
   text-overflow: ellipsis;
 }
 .eventDetails {
-  margin-top: 20px;
+  width: 32%;
+  padding: 20px;
+  border-radius: 20px;
+  border: 2px solid blue;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .eventDetails ul {
@@ -148,6 +204,7 @@
   color: #0F4C81;
   font-weight: 800;
   font-size: 25px;
+  text-align: center;
 }
 .eventsOnDay{
   border: none;
@@ -155,7 +212,7 @@
   justify-content: space-around;
   background-color: #FFE4C8;
   border-radius: 10px;
-  padding: 10px 20px;
+  padding: 10px 0;
   margin-bottom: 10px;
   overflow: hidden;
   white-space: nowrap;
@@ -174,6 +231,7 @@
 .noteEventDay{
   font-size: 18px;
   color: black;
+  word-wrap: break-word;
 }
 @media (max-width: 768px) {
   .calendarContainer {
