--- a/components/Employee/Asset/asset.module.css
+++ b/components/Employee/Asset/asset.module.css
@@ -23,7 +23,7 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   width: 80%;
-  height: 100vh;
+  height: 100%;
 }
 .header{
   background-image: url(/ct2.jpg);
@@ -31,6 +31,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   padding: 30px 20px;
+  height: 25vh;
 }
 /* Tiêu đề của trang */
 .titleEm {
@@ -63,10 +64,7 @@
   gap: 20px;
   padding: 30px;
   background-color: #fff;
-  border-radius: 8px;
-  overflow-x: auto; /* Thêm thanh cuộn ngang khi cần */
-  max-width: 100%; /* Đảm bảo container có chiều rộng tối đa */
-  box-sizing: border-box; 
+  border-radius: 8px; 
 }
 
 /* Card hiển thị tài sản */
@@ -77,7 +75,7 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 1);
   transition: all 0.3s ease;
   display: flex;
-  height: 100%;
+  height: 46vh;
   flex-direction: column;
   justify-content: space-between;
   background-color: rgb(222, 239, 255);
@@ -181,4 +179,8 @@
   display: flex;
   gap: 20px;
   width: 100%;
+}
+.img{
+  height: 25vh;
+  width: auto;
 }
