--- a/components/Employee/Forum/forum.module.css
+++ b/components/Employee/Forum/forum.module.css
@@ -196,6 +196,7 @@
   flex-direction: column;
   gap: 20px;
   width: 100%;
+  padding: 0 0 30px 0;
   justify-content: center;
   align-items: center;
 }
