--- a/components/Employee/SideBar/sideBar.module.css
+++ b/components/Employee/SideBar/sideBar.module.css
@@ -74,6 +74,7 @@
   margin-top: 20px;
   margin-bottom: 15px;
   font-weight: 600;
+  margin-left: 10px;
 }
 
 /* Sidebar feature sections (menu items) */
