--- a/components/PublicComponents/Footer/footer.module.css
+++ b/components/PublicComponents/Footer/footer.module.css
@@ -65,95 +65,90 @@
     display: flex;
     justify-content: center;
 }
-/* Overlay loading */
 .loadingOverlay {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5); /* Nền mờ */
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.4);
   display: flex;
-  justify-content: center;
   align-items: center;
-  z-index: 1001; /* Đảm bảo overlay nằm trên các thành phần khác */
+  justify-content: center;
+  z-index: 1000;
 }
 
-/* Spinner container */
 .loader {
+  display: inline-block;
+  width: 64px;
+  height: 64px;
   position: relative;
-  width: 50px; /* Kích thước của spinner */
-  height: 50px;
 }
 
-/* Vòng tròn trong spinner */
 .loader div {
   position: absolute;
-  width: 12px;
-  height: 12px;
-  background-color: #4c4cff; /* Màu xanh lam */
+  width: 5px;
+  height: 5px;
+  background: #1890ff;
   border-radius: 50%;
-  animation: loaderAnimation 1.2s linear infinite;
+  animation: loaderAnim 1.2s linear infinite;
 }
 
-/* Vị trí từng vòng tròn */
 .loader div:nth-child(1) {
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  animation-delay: -0.6s;
-}
-.loader div:nth-child(2) {
-  top: 14%;
-  left: 85%;
-  transform: translate(-50%, -50%);
-  animation-delay: -0.5s;
-}
-.loader div:nth-child(3) {
-  top: 50%;
-  left: 100%;
-  transform: translate(-50%, -50%);
-  animation-delay: -0.4s;
-}
-.loader div:nth-child(4) {
-  bottom: 14%;
-  left: 85%;
-  transform: translate(-50%, -50%);
-  animation-delay: -0.3s;
-}
-.loader div:nth-child(5) {
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  animation-delay: -0.2s;
-}
-.loader div:nth-child(6) {
-  bottom: 14%;
-  left: 15%;
-  transform: translate(-50%, -50%);
-  animation-delay: -0.1s;
-}
-.loader div:nth-child(7) {
-  top: 50%;
-  left: 0;
-  transform: translate(-50%, -50%);
+  top: 29px;
+  left: 53px;
   animation-delay: 0s;
 }
+
+.loader div:nth-child(2) {
+  top: 18px;
+  left: 50px;
+  animation-delay: -0.1s;
+}
+
+.loader div:nth-child(3) {
+  top: 9px;
+  left: 41px;
+  animation-delay: -0.2s;
+}
+
+.loader div:nth-child(4) {
+  top: 6px;
+  left: 29px;
+  animation-delay: -0.3s;
+}
+
+.loader div:nth-child(5) {
+  top: 9px;
+  left: 17px;
+  animation-delay: -0.4s;
+}
+
+.loader div:nth-child(6) {
+  top: 18px;
+  left: 8px;
+  animation-delay: -0.5s;
+}
+
+.loader div:nth-child(7) {
+  top: 29px;
+  left: 5px;
+  animation-delay: -0.6s;
+}
+
 .loader div:nth-child(8) {
-  top: 14%;
-  left: 15%;
-  transform: translate(-50%, -50%);
+  top: 41px;
+  left: 8px;
   animation-delay: -0.7s;
 }
 
-/* Animation cho spinner */
-@keyframes loaderAnimation {
-  0% {
+@keyframes loaderAnim {
+  0%, 100% {
     transform: scale(1);
-    opacity: 1;
+    background: #1890ff;
   }
-  100% {
-    transform: scale(0.3);
-    opacity: 0;
+  50% {
+    transform: scale(1.5);
+    background: #ff4d4f;
   }
 }
