--- a/components/Employee/Asset/Model/Create/creat.module.css
+++ b/components/Employee/Asset/Model/Create/creat.module.css
@@ -124,3 +124,91 @@
   font-size: 12px;
   color: #f44336;
 }
+/* Overlay loading */
+.loadingOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.loader {
+  display: inline-block;
+  width: 64px;
+  height: 64px;
+  position: relative;
+}
+
+.loader div {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  background: #1890ff;
+  border-radius: 50%;
+  animation: loaderAnim 1.2s linear infinite;
+}
+
+.loader div:nth-child(1) {
+  top: 29px;
+  left: 53px;
+  animation-delay: 0s;
+}
+
+.loader div:nth-child(2) {
+  top: 18px;
+  left: 50px;
+  animation-delay: -0.1s;
+}
+
+.loader div:nth-child(3) {
+  top: 9px;
+  left: 41px;
+  animation-delay: -0.2s;
+}
+
+.loader div:nth-child(4) {
+  top: 6px;
+  left: 29px;
+  animation-delay: -0.3s;
+}
+
+.loader div:nth-child(5) {
+  top: 9px;
+  left: 17px;
+  animation-delay: -0.4s;
+}
+
+.loader div:nth-child(6) {
+  top: 18px;
+  left: 8px;
+  animation-delay: -0.5s;
+}
+
+.loader div:nth-child(7) {
+  top: 29px;
+  left: 5px;
+  animation-delay: -0.6s;
+}
+
+.loader div:nth-child(8) {
+  top: 41px;
+  left: 8px;
+  animation-delay: -0.7s;
+}
+
+@keyframes loaderAnim {
+  0%, 100% {
+    transform: scale(1);
+    background: #1890ff;
+  }
+  50% {
+    transform: scale(1.5);
+    background: #ff4d4f;
+  }
+}
