--- a/components/Employee/Department/department.module.css
+++ b/components/Employee/Department/department.module.css
@@ -3,7 +3,7 @@
     height: 100%;
 }
 .department{
-    width: 80%;
+    width: 82%;
 
 }
 .header{
@@ -95,6 +95,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  color: black;
 }
 
 .inputCreate {
