--- a/components/Employee/Alert/Success/success.module.css
+++ b/components/Employee/Alert/Success/success.module.css
@@ -4,7 +4,7 @@
     top: 20px;
     left: 20px;
     width: 95%;
-    height: 50px;
+    height: auto;
     display: flex;
     justify-content: end;
     z-index: 1000;
@@ -14,8 +14,9 @@
     background-color: white;
     display: flex;
     align-items: center;
-    width: 300px;
-    border-radius: 30px 0 0 30px;
+    width: auto;
+    padding: 10px;
+    border-radius: 10px 0 0 10px;
     border: 3px solid rgb(62, 62, 62);
     background-color: rgb(95, 255, 95);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
