--- a/components/Employee/Alert/Loading/loading.module.css
+++ b/components/Employee/Alert/Loading/loading.module.css
@@ -1,5 +1,6 @@
+
 .loadingOverlay {
-    position: absolute;
+    position: fixed; /* Đổi từ absolute thành fixed */
     top: 0;
     left: 0;
     width: 100%;
@@ -9,29 +10,33 @@
     align-items: center;
     justify-content: center;
     z-index: 9999;
-  }
-  
-  .loader {
+}
+
+.loader {
     display: flex;
     justify-content: center;
     width: 50%;
     position: relative;
     text-align: center;
-  }
-  .title{
+}
+
+.title {
     font-size: 25px;
     font-weight: 600;
     margin-top: -30px;
     z-index: 9999;
-  }
-  .loader div {
+}
+
+/* Các phần còn lại không cần thay đổi */
+.loader div {
     position: absolute;
     width: 5px;
     height: 5px;
     background: #1890ff;
     border-radius: 50%;
     animation: loaderAnim 1.2s linear infinite;
-  }
+}
+
   
   .loader div:nth-child(1) {
     top: 29px;
