--- a/components/Employee/Alert/Success/success.module.css
+++ b/components/Employee/Alert/Success/success.module.css
@@ -1,12 +1,14 @@
 /* styles/AlertModal.css */
 .modaloverlay {
     position: fixed;
-    top: 20px;
-    left: 20px;
-    width: 95%;
-    height: auto;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end; /* Đẩy modal về bên phải */
+    align-items: flex-start; /* Căn modal về phía trên */
+    padding: 20px;
     z-index: 1000;
   }
   
