--- a/components/Employee/SideBar/sideBar.module.css
+++ b/components/Employee/SideBar/sideBar.module.css
@@ -135,7 +135,7 @@
 
 /* Modal and loading overlay styles */
 .loadingOverlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
