--- a/components/Employee/Alert/Note/note.module.css
+++ b/components/Employee/Alert/Note/note.module.css
@@ -1,13 +1,15 @@
 /* styles/AlertModal.css */
 .modaloverlay {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    width: 95%;
-    height: auto;
-    display: flex;
-    justify-content: end;
-    z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end; /* Đẩy modal về bên phải */
+  align-items: flex-start; /* Căn modal về phía trên */
+  padding: 20px;
+  z-index: 1000;
   }
   
   .modalcontent {
@@ -19,7 +21,7 @@
     border: 3px solid rgb(62, 62, 62);
     background-color: rgb(255, 188, 95);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    animation: slideInFromRight 0.5s ease-out, fadeOutToLeft 2.5s ease-in forwards;
+    animation: slideInFromRight 0.5s ease-out, fadeOutToLeft 8s ease-in forwards;
     pointer-events: auto; 
   }
   
